# tomo

./: .cursorrules  .gitignore  ADAPTERS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  demo.py  pyproject.toml  sample_plugins.json
docs/: README.md  api-reference.md  configuration.md  mcp-protocol.md  nextjs-integration.md  quickstart.md  setup.md  troubleshooting.md  typescript-integration.md  vercel-ai-sdk.md
docs/examples/: advanced.md  applications.md  basic.md
docs/examples/code/: README.md  test-integration.py
docs/examples/code/python/: example_tools.py
docs/examples/code/typescript/: basic-example.ts  nextjs-example.tsx.example  package.json  tomo-mcp-client.ts  tsconfig.json
examples/: __init__.py  basic_tools.py  demo.py  llm_adapters.py  orchestrator_demo.py  plugin_demo.py  server_demo.py  workflow_demo.py
examples/plugins/: README.md  custom_adapter_plugin.py  data_tools_plugin.py  web_tools_plugin.py
tests/: __init__.py  test_core.py  test_workflow.py
tomo/: __init__.py
tomo/adapters/: __init__.py  anthropic.py  azure_openai.py  base.py  cohere.py  gemini.py  mistral.py  openai.py
tomo/cli/: __init__.py  main.py
tomo/core/: __init__.py  registry.py  runner.py  tool.py
tomo/orchestrators/: __init__.py  conversation.py  execution.py  llm_orchestrator.py  workflow.py  workflow_engine.py  workflow_steps.py
tomo/plugins/: __init__.py  base.py  loader.py  registry.py
tomo/servers/: __init__.py  api.py  mcp.py
