[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tomo-framework"
version = "0.1.0"
description = "Tool-Oriented Micro Orchestrator - A lightweight framework for LLM-agnostic tool execution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tomo Contributors"},
]
keywords = ["llm", "tools", "orchestration", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.21.0",
]
orchestrator = [
    "openai>=1.0.0",
    "anthropic>=0.21.0",
    "asyncio-mqtt>=0.16.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0.0",
]
mcp = [
    "websockets>=11.0.0",
]
all = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "anthropic>=0.21.0",
    "asyncio-mqtt>=0.16.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
tomo = "tomo.cli.main:app"

[project.urls]
Homepage = "https://github.com/tomo-framework/tomo"
Repository = "https://github.com/tomo-framework/tomo"
Documentation = "https://github.com/tomo-framework/tomo#readme"
Issues = "https://github.com/tomo-framework/tomo/issues"
Changelog = "https://github.com/tomo-framework/tomo/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/tomo-framework/tomo/issues"
"Source Code" = "https://github.com/tomo-framework/tomo"

[tool.hatch.build.targets.wheel]
packages = ["tomo"]

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
/(
    docs/.*
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["docs/"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.10"
exclude = ["docs/"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=tomo",
    "--cov-report=term-missing",
    "--cov-report=html",
] 

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
